force-app/main/default/objects/PHSS_Program__c/PHSS_Program__c.object-meta.xml
<CustomObject>
    <label>PHSS Program</label>
    <nameField>
        <label>PHSS Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PHSS Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>