force-app/main/default/objects/PHSS_Program__c/fields/Content_Library_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Library_Name__c</fullName>
    <label>Content Library Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>