force-app/main/default/objects/PHSS_Program__c/fields/Instructor_Bulletin__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Bulletin__c</fullName>
    <label>Instructor Bulletin</label>
    <type>Url</type>
</CustomField>