force-app/main/default/objects/PHSS_Program__c/fields/PHSS_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>PHSS_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PHSS Product Line</label>
    <referenceTo>PHSS_Product_Line__c</referenceTo>
    <relationshipLabel>PHSS Programs</relationshipLabel>
    <relationshipName>PHSS_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>