force-app/main/default/objects/PHSS_Program__c/fields/Program_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Long_Name__c</fullName>
    <label>Program Long Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>